[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://game/scripts/ui/ShopUI.gd" id="1"]

[node name="ShopUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 292.0
offset_bottom = 28.0
text = "General Store"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 32.0
offset_right = 292.0
offset_bottom = 52.0
text = "Gold: 500"
horizontal_alignment = 2

[node name="ItemsContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 56.0
offset_right = 292.0
offset_bottom = 156.0

[node name="MessageLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 160.0
offset_right = 292.0
offset_bottom = 180.0
text = ""
horizontal_alignment = 1

[node name="InstructionsLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 180.0
offset_right = 292.0
offset_bottom = 196.0
text = "Press Accept to buy, Cancel to close"
horizontal_alignment = 1
